Add connection to mistral, updated prompts, update dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,19 @@
 Flask==3.0.0
-Flask_Cors
-langchain
-pandas
-requests
-scikit_learn
-InstructorEmbedding
-chromadb
-openai
-sentence-transformers
+Flask_Cors==4.0.0
+pandas==2.1.3
+requests==2.31.0
+scikit_learn==1.3.2
+InstructorEmbedding==1.0.1
+chromadb==0.4.17
+openai==1.3.7
+sentence-transformers==2.2.2
 Werkzeug>=3.0.0
-scikeras
-typing-inspect==0.8.0
-typing_extensions==4.5.0
-pydantic==1.10.11
-text_generation
-imblearn
-isodate
-joblib
-tensorflow
+scikeras==0.12.0
+text_generation==0.6.1
+imblearn==0.0
+isodate==0.6.1
+joblib==1.3.2
+tensorflow==2.14.0
 psycopg2==2.9.9
-openai
+mistralai==0.0.8
+langchain==0.0.352
