--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,19 @@
-Flask==3.0.0
-Flask_Cors==4.0.0
+fastapi==0.109.0
+uvicorn==0.27.0
 pandas==2.1.3
-requests==2.31.0
-scikit_learn==1.3.2
-InstructorEmbedding==1.0.1
-chromadb==0.4.17
-openai==1.3.7
-sentence-transformers==2.2.2
 Werkzeug>=3.0.0
-scikeras==0.12.0
-text_generation==0.6.1
-imblearn==0.0
 isodate==0.6.1
 joblib==1.3.2
-tensorflow==2.14.0
 psycopg2==2.9.9
-mistralai==0.0.8
 langchain==0.0.352
+langchain_mistralai==0.0.3
+langchain_openai==0.0.5
+text_generation==0.6.1
+chromadb==0.4.17
+InstructorEmbedding==1.0.1
+sentence-transformers==2.2.2
+FlagEmbedding==1.1.8
+scikit_learn==1.3.2
+scikeras==0.12.0
+tensorflow==2.14.0
 nltk==3.8.1
